--- a/service.html
+++ b/service.html
@@ -11,21 +11,21 @@
 	<meta name="theme-color" content="#ffffff">
 
 	<!-- Canonical -->
-	<link rel="canonical" href="https://reiwagirls.co.jp/service.html">
+	<link rel="canonical" href="https://www.reiwagirls.co.jp/service.html">
 	<link rel="icon" href="/favicon.ico">
 
 	<!-- OGP -->
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="サービス一覧｜株式会社令和ガールズ">
 	<meta property="og:description" content="インフルエンサー支援・ライバー育成・アパレルブランド構築など、REIWAGIRLSの多彩なサービスをご紹介します。">
-	<meta property="og:url" content="https://reiwagirls.co.jp/service.html">
-	<meta property="og:image" content="https://reiwagirls.co.jp/img/ogp.jpg">
+	<meta property="og:url" content="https://www.reiwagirls.co.jp/service.html">
+	<meta property="og:image" content="https://www.reiwagirls.co.jp/img/ogp.jpg">
 
 	<!-- Twitterカード -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="サービス一覧｜株式会社令和ガールズ">
 	<meta name="twitter:description" content="多様な業種のプロデュース支援を展開中。REIWAGIRLSのサービス詳細はこちら。">
-	<meta name="twitter:image" content="https://reiwagirls.co.jp/img/ogp.jpg">
+	<meta name="twitter:image" content="https://www.reiwagirls.co.jp/img/ogp.jpg">
 
 	<!-- 構造化データ Organization -->
 	<script type="application/ld+json">
@@ -33,8 +33,8 @@
 	    "@context": "https://schema.org",
 	    "@type": "Organization",
 	    "name": "REIWAGIRLS Inc.",
-	    "url": "https://reiwagirls.co.jp",
-	    "logo": "https://reiwagirls.co.jp/img/reiwachan.png",
+	    "url": "https://www.reiwagirls.co.jp",
+	    "logo": "https://www.reiwagirls.co.jp/img/reiwachan.png",
 	    "description": "インフルエンサー支援・SNS運用・アパレル制作などを行う株式会社令和ガールズのサービス紹介ページです。",
 	    "address": {
 	      "@type": "PostalAddress",
@@ -64,13 +64,13 @@
 	        "@type": "ListItem",
 	        "position": 1,
 	        "name": "ホーム",
-	        "item": "https://reiwagirls.co.jp/"
+	        "item": "https://www.reiwagirls.co.jp/"
 	      },
 	      {
 	        "@type": "ListItem",
 	        "position": 2,
 	        "name": "サービス一覧",
-	        "item": "https://reiwagirls.co.jp/service.html"
+	        "item": "https://www.reiwagirls.co.jp/service.html"
 	      }
 	    ]
 	  }
@@ -307,7 +307,8 @@
 
 					<h3>お問い合わせ・詳細</h3>
 
-					<p><a href="https://lin.ee/BNNecfR" target="_blank"><strong>公式LINE＠はこちら</strong></a></p>
+					<p><a href="https://page.line.me/fhy3551i?openQrModal=true"
+							target="_blank"><strong>公式LINE＠はこちら</strong></a></p>
 					<h3>株式会社令和ガールズ 概要</h3>
 
 					<ul>
@@ -317,11 +318,14 @@
 							新宿オフィス：〒160-0022 東京都新宿区西新宿8-14-19 小林第二ビル8階<br>
 							新宿営業所：〒163-0604 東京都新宿区西新宿1丁目25番地 新宿センタービル49階
 						</li>
-						<li>公式サイト：<a href="https://www.reiwagirls.com/" target="_blank">https://www.reiwagirls.com/</a>
+						<li>公式サイト：<a href="https://www.reiwagirls.co.jp/"
+								target="_blank">https://www.reiwagirls.co.jp/</a>
 						</li>
-						<li>公式Instagram：<a href="https://www.instagram.com/reiwa_girls_official/"
+						<li>公式Instagram：<a
+								href="https://www.instagram.com/accounts/login/?next=https%3A%2F%2Fwww.instagram.com%2Freiwa_girls_official%2F&is_from_rle"
 								target="_blank">@reiwa_girls_official</a></li>
-						<li>公式LINE＠：<a href="https://lin.ee/BNNecfR" target="_blank">https://lin.ee/BNNecfR</a>
+						<li>公式LINE＠：<a href="https://page.line.me/fhy3551i?openQrModal=true"
+								target="_blank">https://page.line.me/fhy3551i?openQrModal=true</a>
 						</li>
 					</ul>
 
@@ -388,7 +392,8 @@
 					<hr>
 
 					<h3>お問い合わせ・詳細</h3>
-					<p><a href="https://lin.ee/BNNecfR" target="_blank"><strong>公式LINE＠はこちら</strong></a></p>
+					<p><a href="https://page.line.me/fhy3551i?openQrModal=true"
+							target="_blank"><strong>公式LINE＠はこちら</strong></a></p>
 
 					<h3>株式会社令和ガールズ 概要</h3>
 					<ul>
@@ -398,11 +403,14 @@
 							新宿オフィス：〒160-0022 東京都新宿区西新宿8-14-19 小林第二ビル8階<br>
 							新宿営業所：〒163-0604 東京都新宿区西新宿1丁目25番地 新宿センタービル49階
 						</li>
-						<li>公式サイト：<a href="https://www.reiwagirls.com/" target="_blank">https://www.reiwagirls.com/</a>
+						<li>公式サイト：<a href="https://www.reiwagirls.co.jp/"
+								target="_blank">https://www.reiwagirls.co.jp/</a>
 						</li>
-						<li>公式Instagram：<a href="https://www.instagram.com/reiwa_girls_official/"
+						<li>公式Instagram：<a
+								href="https://www.instagram.com/accounts/login/?next=https%3A%2F%2Fwww.instagram.com%2Freiwa_girls_official%2F&is_from_rle"
 								target="_blank">@reiwa_girls_official</a></li>
-						<li>公式LINE＠：<a href="https://lin.ee/BNNecfR" target="_blank">https://lin.ee/BNNecfR</a></li>
+						<li>公式LINE＠：<a href="https://page.line.me/fhy3551i?openQrModal=true"
+								target="_blank">https://page.line.me/fhy3551i?openQrModal=true</a></li>
 					</ul>
 				</div>
 			</div>
@@ -472,7 +480,8 @@
 
 					<h3>詳細・お申し込み</h3>
 
-					<p><a href="https://lin.ee/BNNecfR" target="_blank"><strong>株式会社令和ガールズ公式LINE＠はこちら</strong></a></p>
+					<p><a href="https://page.line.me/fhy3551i?openQrModal=true"
+							target="_blank"><strong>株式会社令和ガールズ公式LINE＠はこちら</strong></a></p>
 
 					<hr>
 
@@ -498,11 +507,14 @@
 							新宿オフィス：〒160-0022 東京都新宿区西新宿8-14-19 小林第二ビル8階<br>
 							新宿営業所：〒163-0604 東京都新宿区西新宿1丁目25番地 新宿センタービル49階
 						</li>
-						<li>公式サイト：<a href="https://www.reiwagirls.com/" target="_blank">https://www.reiwagirls.com/</a>
+						<li>公式サイト：<a href="https://www.reiwagirls.co.jp/"
+								target="_blank">https://www.reiwagirls.co.jp/</a>
 						</li>
-						<li>公式Instagram：<a href="https://www.instagram.com/reiwa_girls_official/"
+						<li>公式Instagram：<a
+								href="https://www.instagram.com/accounts/login/?next=https%3A%2F%2Fwww.instagram.com%2Freiwa_girls_official%2F&is_from_rle"
 								target="_blank">@reiwa_girls_official</a></li>
-						<li>公式LINE＠：<a href="https://lin.ee/BNNecfR" target="_blank">https://lin.ee/BNNecfR</a>
+						<li>公式LINE＠：<a href="https://page.line.me/fhy3551i?openQrModal=true"
+								target="_blank">https://page.line.me/fhy3551i?openQrModal=true</a>
 						</li>
 					</ul>
 
@@ -557,7 +569,8 @@
 
 					<h3>詳細・お申し込み</h3>
 
-					<p><a href="https://lin.ee/BNNecfR" target="_blank"><strong>株式会社令和ガールズ公式LINE＠はこちら</strong></a></p>
+					<p><a href="https://page.line.me/fhy3551i?openQrModal=true"
+							target="_blank"><strong>株式会社令和ガールズ公式LINE＠はこちら</strong></a></p>
 
 					<hr>
 
@@ -581,11 +594,14 @@
 							新宿オフィス：〒160-0022 東京都新宿区西新宿8-14-19 小林第二ビル8階<br>
 							新宿営業所：〒163-0604 東京都新宿区西新宿1丁目25番地 新宿センタービル49階
 						</li>
-						<li>公式サイト：<a href="https://www.reiwagirls.com/" target="_blank">https://www.reiwagirls.com/</a>
+						<li>公式サイト：<a href="https://www.reiwagirls.co.jp/"
+								target="_blank">https://www.reiwagirls.co.jp/</a>
 						</li>
-						<li>公式Instagram：<a href="https://www.instagram.com/reiwa_girls_official/"
+						<li>公式Instagram：<a
+								href="https://www.instagram.com/accounts/login/?next=https%3A%2F%2Fwww.instagram.com%2Freiwa_girls_official%2F&is_from_rle"
 								target="_blank">@reiwa_girls_official</a></li>
-						<li>公式LINE＠：<a href="https://lin.ee/BNNecfR" target="_blank">https://lin.ee/BNNecfR</a>
+						<li>公式LINE＠：<a href="https://page.line.me/fhy3551i?openQrModal=true"
+								target="_blank">https://page.line.me/fhy3551i?openQrModal=true</a>
 						</li>
 					</ul>
 
@@ -645,7 +661,8 @@
 
 					<h3>お問い合わせ・詳細</h3>
 
-					<p><a href="https://lin.ee/BNNecfR" target="_blank"><strong>公式LINE＠はこちら</strong></a></p>
+					<p><a href="https://page.line.me/fhy3551i?openQrModal=true"
+							target="_blank"><strong>公式LINE＠はこちら</strong></a></p>
 
 					<h3>株式会社令和ガールズ 概要</h3>
 
@@ -656,11 +673,14 @@
 							新宿オフィス：〒160-0022 東京都新宿区西新宿8-14-19 小林第二ビル8階<br>
 							新宿営業所：〒163-0604 東京都新宿区西新宿1丁目25番地 新宿センタービル49階
 						</li>
-						<li>公式サイト：<a href="https://www.reiwagirls.com/" target="_blank">https://www.reiwagirls.com/</a>
+						<li>公式サイト：<a href="https://www.reiwagirls.co.jp/"
+								target="_blank">https://www.reiwagirls.co.jp/</a>
 						</li>
-						<li>公式Instagram：<a href="https://www.instagram.com/reiwa_girls_official/"
+						<li>公式Instagram：<a
+								href="https://www.instagram.com/accounts/login/?next=https%3A%2F%2Fwww.instagram.com%2Freiwa_girls_official%2F&is_from_rle"
 								target="_blank">@reiwa_girls_official</a></li>
-						<li>公式LINE＠：<a href="https://lin.ee/BNNecfR" target="_blank">https://lin.ee/BNNecfR</a></li>
+						<li>公式LINE＠：<a href="https://page.line.me/fhy3551i?openQrModal=true"
+								target="_blank">https://page.line.me/fhy3551i?openQrModal=true</a></li>
 					</ul>
 				</div>
 			</div>
@@ -716,7 +736,8 @@
 					<hr>
 
 					<h3>お問い合わせ・詳細</h3>
-					<p><a href="https://lin.ee/BNNecfR" target="_blank"><strong>公式LINE＠はこちら</strong></a></p>
+					<p><a href="https://page.line.me/fhy3551i?openQrModal=true"
+							target="_blank"><strong>公式LINE＠はこちら</strong></a></p>
 
 					<h3>株式会社令和ガールズ 概要</h3>
 					<ul>
@@ -726,11 +747,14 @@
 							新宿オフィス：〒160-0022 東京都新宿区西新宿8-14-19 小林第二ビル8階<br>
 							新宿営業所：〒163-0604 東京都新宿区西新宿1丁目25番地 新宿センタービル49階
 						</li>
-						<li>公式サイト：<a href="https://www.reiwagirls.com/" target="_blank">https://www.reiwagirls.com/</a>
+						<li>公式サイト：<a href="https://www.reiwagirls.co.jp/"
+								target="_blank">https://www.reiwagirls.co.jp/</a>
 						</li>
-						<li>公式Instagram：<a href="https://www.instagram.com/reiwa_girls_official/"
+						<li>公式Instagram：<a
+								href="https://www.instagram.com/accounts/login/?next=https%3A%2F%2Fwww.instagram.com%2Freiwa_girls_official%2F&is_from_rle"
 								target="_blank">@reiwa_girls_official</a></li>
-						<li>公式LINE＠：<a href="https://lin.ee/BNNecfR" target="_blank">https://lin.ee/BNNecfR</a></li>
+						<li>公式LINE＠：<a href="https://page.line.me/fhy3551i?openQrModal=true"
+								target="_blank">https://page.line.me/fhy3551i?openQrModal=true</a></li>
 					</ul>
 				</div>
 			</div>
