--- a/top.html
+++ b/top.html
@@ -106,7 +106,7 @@
 
 <body>
 	<header class="site-header" id="siteHeader">
-		<a href="index.html" class="logo-link">
+		<a href="/" class="logo-link">
 			<img src="img/reiwachan.png" alt="Logo" class="header-logo">
 		</a>
 		<nav class="header-nav">
