会社住所情報修正

--- a/contact.html
+++ b/contact.html
@@ -19,13 +19,13 @@
 	<meta property="og:title" content="お問い合わせ｜株式会社令和ガールズ">
 	<meta property="og:description" content="SNS・アパレル・プロデュースに関するお問い合わせはこちら。">
 	<meta property="og:url" content="https://reiwagirls.co.jp/contact.html">
-	<meta property="og:image" content="https://reiwagirls.co.jp/img/ogp.jpg">
+	<meta property="og:image" content="https://reiwagirls.co.jp/img_logo/reiwaGirlsLogo.jpg">
 
 	<!-- Twitterカード -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="お問い合わせ｜株式会社令和ガールズ">
 	<meta name="twitter:description" content="SNSプロデュース・PR支援・ブランド制作のご相談はこちらから。">
-	<meta name="twitter:image" content="https://reiwagirls.co.jp/img/ogp.jpg">
+	<meta name="twitter:image" content="https://reiwagirls.co.jp/img_logo/reiwaGirlsLogo.jpg">
 
 	<!-- 構造化データ Organization -->
 	<script type="application/ld+json">
@@ -158,8 +158,8 @@
 					<div class="company-overview-label">所在地</div>
 					<div class="company-overview-content">
 						本社<br>
-						〒160-0023<br>
-						東京都新宿区西新宿8丁目14番19号 小林第二ビル8階
+						〒108-0073<br>
+						東京都港区三田1-11-22 SSTビル1階
 					</div>
 				</div>
 
@@ -258,7 +258,7 @@
 				</div>
 
 				<div class="footer-address">
-					<p>REIWAGIRLS Inc.<br>〒160-0023<br>東京都新宿区西新宿8丁目14番19号 小林第二ビル8階</p>
+					<p>REIWAGIRLS Inc.<br>〒108-0073<br>東京都港区三田1-11-22 SSTビル1階</p>
 				</div>
 
 				<div class="footer-bottom">
