--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 	<meta property="og:title" content="令和ガールズ｜SNS運用・インフルエンサー支援・アパレル制作">
 	<meta property="og:description" content="夢をカタチに。SNS時代のブランド支援を令和ガールズがサポート。">
 	<meta property="og:url" content="https://reiwagirls.co.jp/">
-	<meta property="og:image" content="https://reiwagirls.co.jp/img/ogp.jpg">
+	<meta property="og:image" content="https://reiwagirls.co.jp/img_logo/reiwaGirlsLogo.jpg">
 
 	<!-- Twitterカード -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="令和ガールズ｜SNS運用・インフルエンサー支援・アパレル制作">
 	<meta name="twitter:description" content="SNSマーケティングとブランディングを一貫してサポートする企業です。">
-	<meta name="twitter:image" content="https://reiwagirls.co.jp/img/ogp.jpg">
+	<meta name="twitter:image" content="https://reiwagirls.co.jp/img_logo/reiwaGirlsLogo.jpg">
 
 	<!-- Google構造化データ Organization -->
 	<script type="application/ld+json">
@@ -38,10 +38,10 @@
 	    "description": "SNS運用・インフルエンサー支援・アパレルプロデュースを行う企業",
 	    "address": {
 	      "@type": "PostalAddress",
-	      "streetAddress": "西新宿8丁目14番19号 小林第二ビル8階",
-	      "addressLocality": "新宿区",
+	      "streetAddress": "東京都港区三田1-11-22 SSTビル1階",
+	      "addressLocality": "港区",
 	      "addressRegion": "東京都",
-	      "postalCode": "160-0023",
+	      "postalCode": "108-0073",
 	      "addressCountry": "JP"
 	    },
 	    "contactPoint": {
@@ -371,7 +371,8 @@
 		<section class="service-hero theme-blue-text" id="section1">
 			<section class="about-service">
 				<h2 class="reiwaGirls-serviceContent-title">令和GIRLSの提供サービス</h2>
-				<p style="display: none;">インフルエンサーのキャスティング、SNSの企画・運用代行、アパレルブランド立ち上げ支援、ライブ配信・PR案件獲得支援などを行っています。</p style="display: none;">
+				<p style="display: none;">インフルエンサーのキャスティング、SNSの企画・運用代行、アパレルブランド立ち上げ支援、ライブ配信・PR案件獲得支援などを行っています。</p
+					style="display: none;">
 			</section>
 
 			<div class="service-inner">
@@ -513,7 +514,7 @@
 				</div>
 
 				<div class="footer-address">
-					<p>REIWAGIRLS Inc.<br>〒160-0023<br>東京都新宿区西新宿8丁目14番19号 小林第二ビル8階</p>
+					<p>REIWAGIRLS Inc.<br>〒108-0073<br>東京都港区三田1-11-22 SSTビル1階</p>
 				</div>
 
 				<div class="footer-bottom">
