--- a/company.html
+++ b/company.html
@@ -19,13 +19,13 @@
 	<meta property="og:title" content="会社概要｜株式会社令和ガールズ">
 	<meta property="og:description" content="株式会社令和ガールズの企業情報を紹介。SNS運用やアパレルブランド支援など多角的に展開。">
 	<meta property="og:url" content="https://reiwagirls.co.jp/company.html">
-	<meta property="og:image" content="https://reiwagirls.co.jp/img/ogp.jpg">
+	<meta property="og:image" content="https://reiwagirls.co.jp/img_logo/reiwaGirlsLogo.jpg">
 
 	<!-- Twitterカード -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="会社概要｜株式会社令和ガールズ">
 	<meta name="twitter:description" content="令和ガールズの会社情報ページ。事業内容、設立、所在地をご確認いただけます。">
-	<meta name="twitter:image" content="https://reiwagirls.co.jp/img/ogp.jpg">
+	<meta name="twitter:image" content="https://reiwagirls.co.jp/img_logo/reiwaGirlsLogo.jpg">
 
 	<!-- 構造化データ Organization -->
 	<script type="application/ld+json">
@@ -38,10 +38,10 @@
 	    "description": "SNS運用代行、ライバー育成、アパレルプロデュースを展開する株式会社令和ガールズの会社概要ページです。",
 	    "address": {
 	      "@type": "PostalAddress",
-	      "streetAddress": "西新宿8丁目14番19号 小林第二ビル8階",
-	      "addressLocality": "新宿区",
+	      "streetAddress": "東京都港区三田1-11-22 SSTビル1階",
+	      "addressLocality": "港区",
 	      "addressRegion": "東京都",
-	      "postalCode": "160-0023",
+	      "postalCode": "108-0073",
 	      "addressCountry": "JP"
 	    },
 	    "contactPoint": {
@@ -249,8 +249,8 @@
 						<div class="company-overview-label">所在地</div>
 						<div class="company-overview-content">
 							本社<br>
-							〒160-0023<br>
-							東京都新宿区西新宿8丁目14番19号 小林第二ビル8階
+							〒108-0073<br>
+							東京都港区三田1-11-22 SSTビル1階
 						</div>
 					</div>
 
@@ -351,7 +351,7 @@
 				</div>
 
 				<div class="footer-address">
-					<p>REIWAGIRLS Inc.<br>〒160-0023<br>東京都新宿区西新宿8丁目14番19号 小林第二ビル8階</p>
+					<p>REIWAGIRLS Inc.<br>〒108-0073<br>東京都港区三田1-11-22 SSTビル1階</p>
 				</div>
 
 				<div class="footer-bottom">
