--- a/recruit.html
+++ b/recruit.html
@@ -19,13 +19,13 @@
 	<meta property="og:title" content="採用情報｜株式会社令和ガールズ">
 	<meta property="og:description" content="夢を仕事に。REIWAGIRLSではアイドル・ライバー・広報・事務などの仲間を募集しています。">
 	<meta property="og:url" content="https://reiwagirls.co.jp/recruit.html">
-	<meta property="og:image" content="https://reiwagirls.co.jp/img/ogp.jpg">
+	<meta property="og:image" content="https://reiwagirls.co.jp/img_logo/reiwaGirlsLogo.jpg>
 
 	<!-- Twitterカード -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="採用情報｜株式会社令和ガールズ">
 	<meta name="twitter:description" content="多様な働き方と夢を支援。REIWAGIRLSの採用情報はこちら。">
-	<meta name="twitter:image" content="https://reiwagirls.co.jp/img/ogp.jpg">
+	<meta name="twitter:image" content="https://reiwagirls.co.jp/img_logo/reiwaGirlsLogo.jpg">
 
 	<!-- 構造化データ Organization -->
 	<script type="application/ld+json">
@@ -38,10 +38,10 @@
 	    "description": "インフルエンサー支援・SNS運用・アパレル制作などを行う株式会社令和ガールズの採用情報ページです。",
 	    "address": {
 	      "@type": "PostalAddress",
-	      "streetAddress": "西新宿8丁目14番19号 小林第二ビル8階",
-	      "addressLocality": "新宿区",
+	      "streetAddress": "東京都港区三田1-11-22 SSTビル1階",
+	      "addressLocality": "港区",
 	      "addressRegion": "東京都",
-	      "postalCode": "160-0023",
+	      "postalCode": "108-0073",
 	      "addressCountry": "JP"
 	    },
 	    "contactPoint": {
@@ -286,7 +286,7 @@
 				</div>
 
 				<div class="footer-address">
-					<p>REIWAGIRLS Inc.<br>〒160-0023<br>東京都新宿区西新宿8丁目14番19号 小林第二ビル8階</p>
+					<p>REIWAGIRLS Inc.<br>〒108-0073<br>東京都港区三田1-11-22 SSTビル1階</p>
 				</div>
 
 				<div class="footer-bottom">
