--- a/service.html
+++ b/service.html
@@ -19,13 +19,13 @@
 	<meta property="og:title" content="サービス一覧｜株式会社令和ガールズ">
 	<meta property="og:description" content="インフルエンサー支援・ライバー育成・アパレルブランド構築など、REIWAGIRLSの多彩なサービスをご紹介します。">
 	<meta property="og:url" content="https://www.reiwagirls.co.jp/service.html">
-	<meta property="og:image" content="https://www.reiwagirls.co.jp/img/ogp.jpg">
+	<meta property="og:image" content="https://www.reiwagirls.co.jp/img_logo/reiwaGirlsLogo.jpg">
 
 	<!-- Twitterカード -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="サービス一覧｜株式会社令和ガールズ">
 	<meta name="twitter:description" content="多様な業種のプロデュース支援を展開中。REIWAGIRLSのサービス詳細はこちら。">
-	<meta name="twitter:image" content="https://www.reiwagirls.co.jp/img/ogp.jpg">
+	<meta name="twitter:image" content="https://www.reiwagirls.co.jp/img_logo/reiwaGirlsLogo.jpg">
 
 	<!-- 構造化データ Organization -->
 	<script type="application/ld+json">
@@ -34,14 +34,14 @@
 	    "@type": "Organization",
 	    "name": "REIWAGIRLS Inc.",
 	    "url": "https://www.reiwagirls.co.jp",
-	    "logo": "https://www.reiwagirls.co.jp/img/reiwachan.png",
+	    "logo": "https://www.reiwagirls.co.jp/img_logo/reiwaGirlsLogo.jpg",
 	    "description": "インフルエンサー支援・SNS運用・アパレル制作などを行う株式会社令和ガールズのサービス紹介ページです。",
 	    "address": {
 	      "@type": "PostalAddress",
-	      "streetAddress": "西新宿8丁目14番19号 小林第二ビル8階",
-	      "addressLocality": "新宿区",
+	      "streetAddress": "三田1-11-22 SSTビル1階",
+	      "addressLocality": "港区",
 	      "addressRegion": "東京都",
-	      "postalCode": "160-0023",
+	      "postalCode": "108-0073",
 	      "addressCountry": "JP"
 	    },
 	    "contactPoint": {
@@ -314,9 +314,7 @@
 					<ul>
 						<li>会社名：株式会社令和ガールズ</li>
 						<li>代表取締役：室井涼介</li>
-						<li>所在地：<br>
-							新宿オフィス：〒160-0022 東京都新宿区西新宿8-14-19 小林第二ビル8階<br>
-							新宿営業所：〒163-0604 東京都新宿区西新宿1丁目25番地 新宿センタービル49階
+						<li>所在地：〒108-0073 東京都港区三田1-11-22 SSTビル1階<br>
 						</li>
 						<li>公式サイト：<a href="https://www.reiwagirls.co.jp/"
 								target="_blank">https://www.reiwagirls.co.jp/</a>
@@ -399,9 +397,7 @@
 					<ul>
 						<li>会社名：株式会社令和ガールズ</li>
 						<li>代表取締役：室井涼介</li>
-						<li>所在地：<br>
-							新宿オフィス：〒160-0022 東京都新宿区西新宿8-14-19 小林第二ビル8階<br>
-							新宿営業所：〒163-0604 東京都新宿区西新宿1丁目25番地 新宿センタービル49階
+						<li>所在地：〒108-0073 東京都港区三田1-11-22 SSTビル1階<br>
 						</li>
 						<li>公式サイト：<a href="https://www.reiwagirls.co.jp/"
 								target="_blank">https://www.reiwagirls.co.jp/</a>
@@ -503,9 +499,7 @@
 					<ul>
 						<li>会社名：株式会社令和ガールズ</li>
 						<li>代表取締役：室井涼介</li>
-						<li>所在地：<br>
-							新宿オフィス：〒160-0022 東京都新宿区西新宿8-14-19 小林第二ビル8階<br>
-							新宿営業所：〒163-0604 東京都新宿区西新宿1丁目25番地 新宿センタービル49階
+						<li>所在地：〒108-0073 東京都港区三田1-11-22 SSTビル1階<br>
 						</li>
 						<li>公式サイト：<a href="https://www.reiwagirls.co.jp/"
 								target="_blank">https://www.reiwagirls.co.jp/</a>
@@ -590,9 +584,7 @@
 					<ul>
 						<li>会社名：株式会社令和ガールズ</li>
 						<li>代表取締役：室井涼介</li>
-						<li>所在地：<br>
-							新宿オフィス：〒160-0022 東京都新宿区西新宿8-14-19 小林第二ビル8階<br>
-							新宿営業所：〒163-0604 東京都新宿区西新宿1丁目25番地 新宿センタービル49階
+						<li>所在地：〒108-0073 東京都港区三田1-11-22 SSTビル1階<br>
 						</li>
 						<li>公式サイト：<a href="https://www.reiwagirls.co.jp/"
 								target="_blank">https://www.reiwagirls.co.jp/</a>
@@ -669,9 +661,7 @@
 					<ul>
 						<li>会社名：株式会社令和ガールズ</li>
 						<li>代表取締役：室井涼介</li>
-						<li>所在地：<br>
-							新宿オフィス：〒160-0022 東京都新宿区西新宿8-14-19 小林第二ビル8階<br>
-							新宿営業所：〒163-0604 東京都新宿区西新宿1丁目25番地 新宿センタービル49階
+						<li>所在地：〒108-0073 東京都港区三田1-11-22 SSTビル1階<br>
 						</li>
 						<li>公式サイト：<a href="https://www.reiwagirls.co.jp/"
 								target="_blank">https://www.reiwagirls.co.jp/</a>
@@ -743,9 +733,7 @@
 					<ul>
 						<li>会社名：株式会社令和ガールズ</li>
 						<li>代表取締役：室井涼介</li>
-						<li>所在地：<br>
-							新宿オフィス：〒160-0022 東京都新宿区西新宿8-14-19 小林第二ビル8階<br>
-							新宿営業所：〒163-0604 東京都新宿区西新宿1丁目25番地 新宿センタービル49階
+						<li>所在地：〒108-0073 東京都港区三田1-11-22 SSTビル1階<br>
 						</li>
 						<li>公式サイト：<a href="https://www.reiwagirls.co.jp/"
 								target="_blank">https://www.reiwagirls.co.jp/</a>
@@ -815,7 +803,7 @@
 				</div>
 
 				<div class="footer-address">
-					<p>REIWAGIRLS Inc.<br>〒160-0023<br>東京都新宿区西新宿8丁目14番19号 小林第二ビル8階</p>
+					<p>REIWAGIRLS Inc.<br>〒108-0073<br>東京都港区三田1-11-22 SSTビル1階</p>
 				</div>
 
 				<div class="footer-bottom">
