--- a/top.html
+++ b/top.html
@@ -19,13 +19,13 @@
 	<meta property="og:title" content="企業理念｜株式会社令和ガールズ">
 	<meta property="og:description" content="令和ガールズの想いと価値観を形に。企業理念・ミッション・バリューをご紹介します。">
 	<meta property="og:url" content="https://reiwagirls.co.jp/top.html">
-	<meta property="og:image" content="https://reiwagirls.co.jp/img/ogp.jpg">
+	<meta property="og:image" content="https://reiwagirls.co.jp/img_logo/reiwaGirlsLogo.jpg">
 
 	<!-- Twitterカード -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="企業理念｜株式会社令和ガールズ">
 	<meta name="twitter:description" content="未来を創造する企業、REIWAGIRLSの企業理念ページ。">
-	<meta name="twitter:image" content="https://reiwagirls.co.jp/img/ogp.jpg">
+	<meta name="twitter:image" content="https://reiwagirls.co.jp/img_logo/reiwaGirlsLogo.jpg">
 
 	<!-- 構造化データ Organization -->
 	<script type="application/ld+json">
@@ -38,10 +38,10 @@
 	    "description": "株式会社令和ガールズの企業理念・ミッション・バリューをご紹介するページです。",
 	    "address": {
 	      "@type": "PostalAddress",
-	      "streetAddress": "西新宿8丁目14番19号 小林第二ビル8階",
-	      "addressLocality": "新宿区",
+	      "streetAddress": "東京都港区三田1-11-22 SSTビル1階",
+	      "addressLocality": "港区",
 	      "addressRegion": "東京都",
-	      "postalCode": "160-0023",
+	      "postalCode": "108-0073",
 	      "addressCountry": "JP"
 	    },
 	    "contactPoint": {
@@ -318,7 +318,7 @@
 				</div>
 
 				<div class="footer-address">
-					<p>REIWAGIRLS Inc.<br>〒160-0023<br>東京都新宿区西新宿8丁目14番19号 小林第二ビル8階</p>
+					<p>REIWAGIRLS Inc.<br>〒108-0073<br>東京都港区三田1-11-22 SSTビル1階</p>
 				</div>
 
 				<div class="footer-bottom">
