微調整/ボタン直し

--- a/company.html
+++ b/company.html
@@ -9,6 +9,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="REIWAGIRLS Inc.">
 	<meta name="theme-color" content="#ffffff">
+	<meta name="format-detection" content="telephone=no">
+
 
 	<!-- Canonical -->
 	<link rel="canonical" href="https://reiwagirls.co.jp/company.html">
@@ -219,7 +221,7 @@
 						<li>案件へのキャスティング</li>
 						<li class="note">他にも特典多数!!</li>
 					</ul>
-					<a href="#" class="line-apply-button">LINEから応募する</a>
+					<a href="https://page.line.me/fhy3551i?openQrModal=true" class="line-apply-button">LINEから応募する</a>
 				</div>
 
 				<div class="creator-recruit-image">
