--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="REIWAGIRLS Inc.">
 	<meta name="theme-color" content="#ffffff">
+	<meta name="format-detection" content="telephone=no">
 
 	<!-- Canonical -->
 	<link rel="canonical" href="https://reiwagirls.co.jp/contact.html">
